frontend/test/should_fail/set_003.grg
using set_model_001;

rule removeWrongType {
	a:A;
	
	modify {
		eval {
			a.intSet = a.intSet \ set<int>{ a.stringValue };
		}
	}
}